[package]
name = "giallo"
version = "0.0.1"
edition = "2024"
license = "EUPL-1.2"
description = "A code highlighter giving the same output as VSCode"

[dependencies]
onig = { version = "6", default-features = false, git = "https://github.com/Keats/rust-onig", branch = "main" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# Optional dependencies for serialization
rmp-serde = { version = "1.1", optional = true }
flate2 = { version = "1.0", optional = true }

log = { version = "0.4", optional = true }

[features]
tools = ["dump"]
debug = ["dep:log"]
builtins = []
dump = ["dep:rmp-serde", "dep:flate2"]

[dev-dependencies]
criterion = "0.7"
pretty_assertions = "1.0"
insta = { version = "1", features = ["yaml"] }
# env_logger = "0.11.8"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
debug = true

[[bench]]
name = "registry"
harness = false
required-features = ["dump"]

[[bench]]
name = "highlight_benchmark"
harness = false
required-features = ["dump"]

[[example]]
name = "profile_jquery"
required-features = ["dump"]

[[example]]
name = "output_html"
required-features = ["dump"]

[[example]]
name = "generate_css"
required-features = ["dump"]

[[bin]]
name = "build-registry"
path = "tools/build_registry.rs"
required-features = ["tools"]

