[package]
name = "giallo"
version = "0.3.1"
edition = "2024"
license = "EUPL-1.2"
description = "A code highlighter giving the same output as VSCode"
repository = "https://github.com/getzola/giallo"

include = [
  "src/**/*.rs",
  "benches/**/*",
  "examples/**/*",
  "tools/**/*",
  "Cargo.toml",
  "/LICENSE",
  "/README.md",
  "builtin.zst",
]


[dependencies]
onig = { package = "onig-regset", version = "6", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
papaya = "0.2"

# Optional dependencies for serialization
bitcode = { version = "0.6.9", optional = true, features = ["serde"] }
zstd = { version = "0.13.3", optional = true }

log = { version = "0.4", optional = true }

[features]
tools = ["dump"]
debug = ["dep:log"]
dump = ["dep:bitcode", "dep:zstd"]

[dev-dependencies]
criterion = "0.8"
insta = { version = "1", features = ["yaml"] }
# env_logger = "0.11.8"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
debug = true

[[bench]]
name = "registry"
harness = false
required-features = ["dump"]

[[bench]]
name = "highlight_benchmark"
harness = false
required-features = ["dump"]

[[example]]
name = "basic"
required-features = ["dump"]

[[example]]
name = "profile_jquery"
required-features = ["dump"]

[[example]]
name = "profile_simple_ts"
required-features = ["dump"]

[[example]]
name = "output_html"
required-features = ["dump"]

[[example]]
name = "output_terminal"
required-features = ["dump"]

[[example]]
name = "custom_rendering"
required-features = ["dump"]

[[example]]
name = "html_classes"
required-features = ["dump"]

[[bin]]
name = "build-registry"
path = "tools/build_registry.rs"
required-features = ["tools"]
